k8s/urlanalytics/urlanalytics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urlanalytics-deployment
  labels:
    app: urlanalytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: urlanalytics
  template:
    metadata:
      labels:
        app: urlanalytics
    spec:
      containers:
        - name: urlanalytics
          image: neel0086/urlanalytics:aa7cd33
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
