k8s/urlanalytics/urlanalytics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: urlanalytics-service
spec:
  selector:
    app: urlanalytics
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
