k8s/urlanalytics/urlanalytics-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: urlanalytics-networkpolicy
  namespace: url-system
spec:
  podSelector:
    matchLabels:
      app: urlanalytics
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # only allow traffic from urlredirection pods
    - from:
        - podSelector:
            matchLabels:
              app: urlredirection
      ports:
        - protocol: TCP
          port: 8082
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: kafka
      ports:
        - protocol: TCP
          port: 9092
    - to:
        - podSelector:
            matchLabels:
              app: redis
      ports:
        - protocol: TCP 
          port: 6379
    - {}
